# AnySort

./: .gitattributes  .gitignore  AnySort.cmd  AnySort.desktop  AnySort.sh  AnySort.vbs  CLAUDE.md  CLAUDE.md.original.md  README.md  USB_WSL_Docker_Guide.md  Work.md  Work_thesis.md
.claude/: settings.local.json
app/: anysort.py  calibration_tester.py  camera_calibration.py  grasp_execute_pipeline.py  hand_eye_calibration.py  sam3_server.py
app/robots/: TEMPLATE.py  __init__.py  base.py  dobot_cr.py  ur10.py  ur10_cmd_server.script
app/tools/: TEMPLATE.py  __init__.py  base.py  dobot_vacuum.py  onrobot_urscript.py
data/: ui.py
docker/: .env.example  Bash.cmd  Dockerfile  docker-compose.yml  entrypoint.sh  requirements.txt
obsidian/: 00 - Home.md  Commands Reference.md  Known Issues & Fixes.md
ros2_ws/src/graspgen_pipeline/: CMakeLists.txt  package.xml
ros2_ws/src/graspgen_pipeline/config/: pipeline_params.yaml
ros2_ws/src/graspgen_pipeline/graspgen_pipeline/: __init__.py  camera_node.py  grasp_generator_node.py  motion_planner_node.py  pipeline_orchestrator.py  segmentation_node.py
ros2_ws/src/graspgen_pipeline/launch/: full_pipeline.launch.py  orbbec_camera.launch.py
ros2_ws/src/robotiq_3f_driver/: CMakeLists.txt  package.xml
ros2_ws/src/robotiq_3f_driver/launch/: gripper.launch.py
ros2_ws/src/robotiq_3f_driver/robotiq_3f_driver/: __init__.py  gripper_node.py
scripts/: build_workspace.sh  demo_orbbec_gemini2.py  download_models.sh  reattach.ps1  sam3_segment_once.py  sam3_server.py  setup_orbbec.sh  test_camera.sh  test_environment.sh  test_full_pipeline.py  test_graspgen.py  test_gripper.py  test_sam3.py  test_webcam.py  view_camera.py
(+85 files in other folders)
